--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,27 +3,25 @@
 @tailwind utilities;
 
 
-@layer utilities {
-    .scrollbar::-webkit-scrollbar {
-      width: 20px;
-      height: 20px;
-    }
-  
-    .scrollbar::-webkit-scrollbar-track {
-      border-radius: 100vh;
-      background: #edf0f7;
-    }
-  
-    .scrollbar::-webkit-scrollbar-thumb {
-      background: #5618ff;
-      border-radius: 100vh;
-      border: 3px solid #f6f7ed;
-    }
-  
-    .scrollbar::-webkit-scrollbar-thumb:hover {
-      background: #c0a0b9;
-    }
-  }
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #10214a;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
 
 
 #text-area {
@@ -31,13 +29,3 @@
 }
 
 
-/* For Webkit-based browsers (Chrome, Safari and Opera) */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
-
-/* For IE, Edge and Firefox */
-.scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
